force-app/main/default/objects/Job_Assessment_Config__c/Job_Assessment_Config__c.object-meta.xml
<CustomObject>
    <label>Job_Assessment_Config</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Job_Assessment_Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job_Assessment_Config</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>