force-app/main/default/objects/Job_Assessment_Config__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <label>Job_Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Job_Assessment_Config</relationshipLabel>
    <relationshipName>Job_Assessment_Config</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>