force-app/main/default/objects/Job_Assessment_Config__c/fields/Passing_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Passing_Criteria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passing_Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>